--- a/www/index.html
+++ b/www/index.html
@@ -35,52 +35,26 @@
 <body ng-app="starter">
 
 <ion-pane>
-  <ion-header-bar class="bar-royal">
-    <h1 class="title">Ionic Blank Starter</h1>
+  <ion-header-bar class="bar-dark">
+    <h2 class="title">Artist title</h2>
   </ion-header-bar>
-  <ion-content>
-    <!--Emmet-->
-    <!--ul.list>li.item{Item $$}*30-->
-    <!--.list>a[href="#"].item{Item $$}*30-->
-    <div class="list">
-      <a href="#" class="item item-icon-left">
-        <i class="icon ion-email"></i>
-        Item 01</a>
-      <a href="#" class="item item-icon-left item-icon-right">
-        <i class="icon ion-chatbubble-working"></i>
-        Item 02
-        <i class="icon ion-ionic"></i>
-      </a>
-      <a href="#" class="item  item-icon-left">
-        <i class="icon ion-mic-a"></i>
-        Item 04
-        <span class="item-note">Record</span>
-      </a>
-      <a href="#" class="item">
-        Item 04
-        <span class="badge badge-assertive">3</span>
-      </a>
-      <a href="#" class="item  item-button-right">Item 05
-        <button class="button button-assertive">
-          <i class="icon ion-person"></i>
-        </button>
-      </a>
-      <div class="item item-divider">Group2</div>
-      <a href="#" class="item item-avatar">Item 017
-        <img src="http://placehold.it/100x100" alt="Avatar"/>
-      </a>
-      <a href="#" class="item item-thumbnail-left">
-        <img src="http://placehold.it/100x100" alt="Avatar"/>
+  <div class="bar bar-subheader item-input-inset bar-light">
+    <label class="item-input-wrapper">
+      <i class="icon ion-search placeholder-icon"></i>
+      <input type="search" placeholder="search" ng-model="query">
+    </label>
+  </div>
 
-        <h2>Item 08</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea hic modi quam? Accusantium consectetur dicta
-          eos est inventore ipsa ipsum iure neque omnis, placeat provident, reiciendis sapiente sequi sunt vel?</p>
-      </a>
-      <a href="#" class="item">Item 09</a>
-      <a href="#" class="item">Item 10</a>
-    </div>
-
-
+  <ion-content class="has-subheader" ng-controller="ListController">
+    <ion-list ng-repeat="item in artists | filter: query">
+      <ion-item class="item-thumbnail-left item-text-wrap">
+        <img src="img/{{item.shortname}}_tn.jpg" alt="{{item.name}} Photo">
+        <h2>{{item.name}}</h2>
+        <h3>{{item.reknown}}</h3>
+        <p>{{item.bio | limitTo:100}}
+          {{item.bio.length > 150 ? '&hellip;' : ''}}</p>
+      </ion-item>
+    </ion-list>
   </ion-content>
 </ion-pane>
 </body>
