--- a/www/index.html
+++ b/www/index.html
@@ -34,25 +34,31 @@
 </head>
 <body ng-app="starter">
 
-<ion-pane>
+<ion-pane ng-controller="ListController">
   <ion-header-bar class="bar-dark">
     <h2 class="title">Artist title</h2>
+    <button class="button button-icon ion-navicon" ng-click="data.showReorder = !data.showReorder">
+
+    </button>
   </ion-header-bar>
-  <div class="bar bar-subheader item-input-inset bar-light">
+  <div class="bar bar-subheader item-input-inset bar-light" >
     <label class="item-input-wrapper">
       <i class="icon ion-search placeholder-icon"></i>
       <input type="search" placeholder="search" ng-model="query">
     </label>
   </div>
 
-  <ion-content class="has-subheader" ng-controller="ListController">
-    <ion-list ng-repeat="item in artists | filter: query">
-      <ion-item class="item-thumbnail-left item-text-wrap">
+
+
+  <ion-content class="has-subheader">
+    <ion-list  show-reorder="data.showReorder">
+      <ion-item class="item-thumbnail-left item-text-wrap" ng-repeat="item in artists | filter: query">
         <img src="img/{{item.shortname}}_tn.jpg" alt="{{item.name}} Photo">
         <h2>{{item.name}}</h2>
         <h3>{{item.reknown}}</h3>
         <p>{{item.bio | limitTo:100}}
           {{item.bio.length > 150 ? '&hellip;' : ''}}</p>
+        <ion-reorder-button class="ion-navicon" on-reorder="moveItem(item, $fromIndex, $toIndex)"></ion-reorder-button>
       </ion-item>
     </ion-list>
   </ion-content>
