--- a/www/index.html
+++ b/www/index.html
@@ -36,10 +36,12 @@
 
 <ion-pane ng-controller="ListController">
   <ion-header-bar class="bar-dark">
-    <h2 class="title">Artist title</h2>
-    <button class="button button-icon ion-navicon" ng-click="data.showReorder = !data.showReorder">
-
+    <button class="button button-icon ion-minus-circled" ng-click="data.showDelete = !data.showDelete; data.showReorder = false">
     </button>
+    <h2 class="title">Artist title</h2>
+    <button class="button button-icon ion-navicon" ng-click="data.showReorder = !data.showReorder; data.showDelete = false "/>
+    </button>
+
   </ion-header-bar>
   <div class="bar bar-subheader item-input-inset bar-light" >
     <label class="item-input-wrapper">
@@ -51,13 +53,14 @@
 
 
   <ion-content class="has-subheader">
-    <ion-list  show-reorder="data.showReorder">
+    <ion-list  show-reorder="data.showReorder" show-delete="data.showDelete">
       <ion-item class="item-thumbnail-left item-text-wrap" ng-repeat="item in artists | filter: query">
         <img src="img/{{item.shortname}}_tn.jpg" alt="{{item.name}} Photo">
         <h2>{{item.name}}</h2>
         <h3>{{item.reknown}}</h3>
         <p>{{item.bio | limitTo:100}}
           {{item.bio.length > 150 ? '&hellip;' : ''}}</p>
+        <ion-delete-button class="ion-minus-circled" ng-click="onItemDelete(item)"></ion-delete-button>
         <ion-reorder-button class="ion-navicon" on-reorder="moveItem(item, $fromIndex, $toIndex)"></ion-reorder-button>
       </ion-item>
     </ion-list>
