--- a/www/index.html
+++ b/www/index.html
@@ -54,12 +54,18 @@
 
   <ion-content class="has-subheader">
     <ion-list  show-reorder="data.showReorder" show-delete="data.showDelete">
-      <ion-item class="item-thumbnail-left item-text-wrap" ng-repeat="item in artists | filter: query">
-        <img src="img/{{item.shortname}}_tn.jpg" alt="{{item.name}} Photo">
+      <ion-item class="item-thumbnail-left item-text-wrap item-icon-right"
+                ng-class="{'star': item.star}"
+                ng-repeat="item in artists | filter: query">
+        <img ng-src="img/{{item.shortname}}_tn.jpg" alt="{{item.name}} Photo">
         <h2>{{item.name}}</h2>
         <h3>{{item.reknown}}</h3>
         <p>{{item.bio | limitTo:100}}
           {{item.bio.length > 150 ? '&hellip;' : ''}}</p>
+        <button class="button button-clear icon ion-star button-assertive" ng-show="item.star" ng-click="toggleStar(item)"></button>
+        <ion-option-button class="button-dark" ng-click="toggleStar(item)">
+          <i class="icon ion-star"></i>
+        </ion-option-button>
         <ion-delete-button class="ion-minus-circled" ng-click="onItemDelete(item)"></ion-delete-button>
         <ion-reorder-button class="ion-navicon" on-reorder="moveItem(item, $fromIndex, $toIndex)"></ion-reorder-button>
       </ion-item>
