--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,7 @@
 
 
   <ion-content class="has-subheader">
+    <ion-refresher on-refresh="doRefresh()"></ion-refresher>
     <ion-list  show-reorder="data.showReorder" show-delete="data.showDelete">
       <ion-item class="item-thumbnail-left item-text-wrap item-icon-right"
                 ng-class="{'star': item.star}"
